# my-web

./: .gitignore  README.md
front_end_web_developer/: README.md
front_end_web_developer/get-started-with-web/: index.html
front_end_web_developer/get_started_with_web/: index.html
guide/: README.md  bouncing-balls.html  image-gallery-example.html  json.html  number-guessing-game-start.html  simple-rsync.html  simple-sync-ui-block.html  simple-sync-worker.html  simple-sync.html  upload_example.html
guide/css/: image-gallery-example.css  json.css
react_t/: README.md  package-lock.json  package.json  tsconfig.json  tslint.json
redux_t/: README.md
vue_tutorial/: README.md
x-zero/: .gitignore  .python-version  Dockerfile  LICENSE  Procfile  README.md  app.json  autoapp.py  debug.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run.sh  t.sh  webpack.config.js
x-zero-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
x-zero/assets/js/: main.js
x-zero/docs/: authentication-system.md
x-zero/migrations/versions/: 62a59f710474_.py
x-zero/requirements/: dev.in  dev.txt  prod.in  prod.txt
x-zero/shell_scripts/: gen-requirements.sh
x-zero/supervisord_programs/: gunicorn.conf
x-zero/tests/: common_config.py  conftest.py  factories.py  settings.py  test_database.py  test_forms.py  test_functional.py  test_models.py  test_x_zero.py
x-zero/tests/test_authenticate/: test_functional_login.py
x-zero/tests/test_user/: test_user_resource.py
x-zero/x_zero/: app.py  extensions.py  main.py
x-zero/x_zero/authenticate/: serializes.py
x-zero/x_zero/authenticate/resource/: __init__.py  auth.py
x-zero/x_zero/authenticate/services/: __init__.py  auth.py
x-zero/x_zero/public/: forms.py  views.py
x-zero/x_zero/templates/: footer.html  layout.html  nav.html
x-zero/x_zero/templates/public/: home.html  register.html
x-zero/x_zero/user/: models.py  repository.py  serializes.py  service.py
x-zero/x_zero/user/resource/: __init__.py  user.py
(+72 files in other folders)
