[tool.isort]
profile = "black"
skip_glob = ["migrations/*"]

[tool.poetry]
name = "x_zero"
version = "0.0.1"
description = "toy web"
authors = ["alick97 <alick97@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "2.0.2"
Werkzeug = "2.0.2"
Flask-SQLAlchemy = "2.5.1"
SQLAlchemy = "1.4.27"
psycopg2-binary = "2.9.2"
Flask-Migrate = "3.1.0"
email-validator = "1.1.3"
Flask-WTF = "1.0.0"
WTForms = "3.0.0"
gevent = "21.8.0"
supervisor = "4.2.2"
Flask-Static-Digest = "0.2.1"
Flask-Login = "0.5.0"
Flask-Bcrypt = "0.7.1"
Flask-DebugToolbar = "0.11.0"
environs = "9.3.5"
