[tool.isort]
profile = "black"
skip_glob = ["migrations/*"]

[tool.poetry]
name = "x_zero"
version = "0.0.1"
description = "toy web"
authors = ["alick97 <alick97@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.2"
Flask-SQLAlchemy = "3.0.3"
SQLAlchemy = "2.0.13"
Flask-Migrate = "3.1.0"
email-validator = "1.1.3"
Flask-WTF = "1.0.1"
WTForms = "3.0.0"
gevent = "21.8.0"
supervisor = "4.2.2"
Flask-Static-Digest = "0.2.1"
Flask-Login = "0.6.2"
Flask-Bcrypt = "1.0.1"
Flask-DebugToolbar = "0.11.0"
environs = "9.3.5"
Flask-RESTful = "^0.3.9"
flask-marshmallow = "^0.14.0"
flask-caching = "^2.0.2"
jinja2 = "3.0"
